Grace/tests/gibbs/errors/t306.grace
// ERROR = P1018
1 + (.) + 3
